# modu-server

./: .cursorrules  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: __init__.py  alembic.ini  app_container.py  banner.txt  config.yml  logging.yml  main.py  pg_table_create.py  start.py  uvicorn_tools.py
app/alembic/versions/: __init__.py
app/api/: __init__.py
app/api/dependencies/: __init__.py  principal.py
app/api/middlewares/: __init__.py  json_response.py  register.py  response.py
app/api/routers/: __init__.py  register.py
app/api/routers/auth/: __init__.py  login.py  users.py
app/api/routers/bot/: __init__.py  bot.py
app/api/routers/file/: __init__.py  file.py
app/api/routers/init/: __init__.py  setup.py
app/api/routers/llm/: __init__.py  llm_model.py  llm_provider.py  llm_schema.py
app/api/routers/message/: __init__.py  message.py
app/api/routers/system/: __init__.py  setup.py  system.py
app/api/routers/user/: __init__.py  user_favorite.py  users.py
app/api/routers/workspace/: __init__.py  workspace.py
app/config/: __init__.py  config_loader.py  langsmith_config.py  loguru_config.py  opentelemetry_config.py
app/llm/: llm_container.py
app/llm/model/: __init__.py  model_provider_factory.py
app/llm/model/entities/: __init__.py  commons.py  form.py  model.py  provider.py
app/llm/model/entities/models/: __init__.py  embedding.py  image_generation.py  speech_to_text.py  text_generation.py  text_to_speech.py  vision.py
app/llm/model/entities/templates/: text_generation.yml
app/llm/model/providers/: __init__.py  _ordinal.yml
app/llm/model/providers/dashscope/: dashscope.py  dashscope.yml
app/llm/model/providers/moonshot/: __init__.py  moonshot.py  moonshot.yml
app/llm/model/providers/openai/: openai.py  openai.yml
app/llm/model/providers/qianfan/: qianfan.py  qianfan.yml
app/llm/model/providers/tongyi/: tongyi.py  tongyi.yml
app/llm/model/providers/wenxin/: wenxin.py  wenxin.yml
app/llm/model/providers/zhipu/: zhipu.py  zhipu.yml
app/llm/models/: model_provider_factory.py
app/llm/models/entities/: __init__.py  form.py  model.py  provider.py
app/migration/: env.py  utils.py
app/migration/versions/: 2024122816.upgrade.postgres.sql  2024122816_init.py
app/repositories/: __init__.py  repository_container.py
app/repositories/cache/: __init__.py  cache.py  cache_repository_container.py  redis_cache.py
app/repositories/data/: __init__.py  data_base_pg.py  data_base_postgres.py  data_repository_container.py  database.py  database_postgres.py  init_postgres.sql  postgres_database.py  type_decorator.py
app/repositories/data/account/: AccountRepository.py  AccountRepositoryPostgres.py  __init__.py  account_models.py
app/repositories/data/bot/: BotRepository.py  BotRepositoryPostgres.py  __init__.py  bot_models.py
app/repositories/data/favorite/: FavoriteRepository.py  FavoriteRepositoryPostgres.py  __init__.py  favorite.py
app/repositories/data/file/: FileRepository.py  FileRepositoryPostgres.py  __init__.py  file_models.py
app/repositories/data/llm/: LLMModelConfigRepository.py  LLMModelConfigRepositoryPostgres.py  LLMProviderConfigRepository.py  LLMProviderConfigRepositoryPostgres.py  __init__.py  llm_models.py
app/repositories/data/message/: ConversationRepository.py  ConversationRepositoryPostgres.py  MessageRepository.py  MessageRepositoryPostgres.py  __init__.py  conversation_models.py  message_models.py
app/repositories/data/publish/: PublishConfigRepository.py  PublishConfigRepositoryPostgres.py  __init__.py  publish_config.py
app/repositories/data/team/: TeamRepository.py  TeamRepositoryPostgres.py  __init__.py  team_models.py
app/repositories/data/workspace/: WorkspaceRepository.py  WorkspaceRepositoryPostgres.py  __init__.py  workspace_models.py
app/repositories/migrations/: README  alembic.ini
app/repositories/migrations/versions/: 725e9355cd2c_init.py
app/repositories/oss/: __init__.py  oss_repository_container.py
app/repositories/storage/: __init__.py  aliyun_oss_storage.py  local_fs_storage.py  storage.py  storage_repository_container.py
app/repositories/vector/: __init__.py  vector_repository_container.py
app/routers/: __init__.py  register.py
app/routers/auth/: __init__.py  login.py  users.py
app/services/: __init__.py  account_service.py  bot_service.py  file_service.py  init_service.py  llm_provider_service.py  message_service.py  publish_service.py  service_container.py  team_service.py  workspace_service.py
app/services/account/: __init__.py  account_models.py  account_service.py  account_service_container.py
app/services/init/: init_service.py
app/services/llm/: __init__.py  llm_container.py  llm_generate_service.py  llm_message_event_models.py  llm_model_service.py  llm_provider_service.py
app/services/llm/generate/: __init__.py  llm_generate_service.py  llm_message_checkpoint.py  llm_message_event_models.py  llm_message_memory.py  prompt.py
app/services/system/: __init__.py  account_service.py  init_service.py  system_container.py  team_service.py
app/services/team/: team_service.py
app/utils/: __init__.py  auth.py  banner.py  common_utils.py  config_loader.py  constants.py  dataclass_tolerant.py  desensitize.py  dictionary.py  file_utils.py  iterator.py  json.py  lifespan.py  password.py  pydantic.py
app/utils/crypto/: __init__.py  aes.py  composition.py
app/utils/errors/: __init__.py  account_error.py  base_error.py  llm_error.py  space_error.py  system_error.py  team_error.py
app/utils/reflect/: __init__.py  dataclass.py  module_scan.py
cube-gpt-server/: main_cli.py  main_server.py
deploy/docker/: docker-compose-dev.yml
test/: config.yml
test/repositories/data/: pg_table_create.py  test_type_decorator_bool_smallint.py  test_type_decorator_bytes_string.py
test/repositories/storage/: test_aliyun_oss_storage.py  test_local_fs_storage.py
test/utils/: test_auth.py  test_dictionary.py  test_json.py
test/utils/crypto/: test_aes.py  test_composition.py
test/utils/reflect/: test_dataclass.py  test_module_scan.py
(+35 files in other folders)
